Correct z-index

--- a/src/app/sections/footer/footer.component.sass
+++ b/src/app/sections/footer/footer.component.sass
@@ -11,7 +11,7 @@
     width: 110%
     height: 110%
     background: url("/assets/img/map.png") center center / contain no-repeat
-    z-index: 30
+    z-index: 10
     opacity: 0.1
 
   .aae-footer-top
@@ -30,7 +30,7 @@
       justify-content: space-between
       -webkit-align-items: flex-start
       align-items: flex-start
-      z-index: 50
+      z-index: 20
 
       a
         color: $blue-grey-100
